# AuraTranslate

./: .gitignore  CMakeLists.txt
src/: mainwindow.cpp  mainwindow.h  mainwindow.ui
